Correct the display of the CSS. Left align

--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -45,6 +45,8 @@ button:active {
   width: 100%;
   height: 100%;
   background: black;
+  max-width: 320px;
+  max-height: 520px;
 
   display: flex;
   flex-direction: column;
@@ -59,6 +61,8 @@ button:active {
   background: #1c191c;
   line-height: 130px;
   font-size: 6em;
+  max-width: 320px;
+  max-height: 120px;
 
   flex: 1;
 }
@@ -70,7 +74,7 @@ button:active {
 .calculator-display .auto-scaling-text {
   padding: 0 30px;
   position: absolute;
-  right: 0;
+  center: 0;
   transform-origin: right;
 }
 
